--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -12,12 +12,12 @@
 <body>
     
     <header>
-        <nav class="px-3 py-2 text-bg-dark">
-          <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-              <a href="/index.html" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-              </a>
+      <nav class="px-3 py-2 text-bg-dark">
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="index.html" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+              <svg class="bi me-2" width="25" height="25" role="img" aria-label="MotorSport SF"><img class="logoCar" src="/Images/Logo MotorSport.jpg" alt="logo de pagina"><use xlink:href="#logoPagina"/></svg>
+            </a>
     
               <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                 <li>
