--- a/index.html
+++ b/index.html
@@ -69,7 +69,50 @@
         
       </header>
     <section>
-        <h1>buenas</h1>
+        <h1 class="text-center text-decoration-underline bienvenida">Bienvenidos a MotorSport SF</h1>
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/Images/ford fiesta.jpg" class="d-block w-100 alto" alt="ford fiesta">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Ford Focus modelo tunning</h5>
+                <p>Carroceria: utilitario puertas: 5 potencia: 75-200cv consumo: 5-7,1L/100km.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/Images/Subaru-Impreza.jpg" class="d-block w-100 alto" alt="subaru-impreza">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Subaru Impreza</h5>
+                <p>Carroceria: Coupé Puertas: 3 potencia: 280cv Traccion: Integral
+                  .</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="/Images/Volkswagen-Bora-1.8-T-2007.jpg" class="d-block w-100 alto" alt="Volkswagen-Bora">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Volkswagen Bora</h5>
+                <p>Carroceria: Sedán Puertas: 5 Potencia: 180cv Traccion: Delantera
+                  .</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+
     </section>
 
 
